[gd_scene load_steps=25 format=3 uid="uid://dt2dvsrbg2j3k"]

[ext_resource type="Script" uid="uid://e1a1j1dla30e" path="res://scripts/enemy_event_type.gd" id="1_hsuxr"]
[ext_resource type="Shader" uid="uid://d10qnb0m8r7le" path="res://shaders/ColorControl.gdshader" id="2_cdp18"]
[ext_resource type="Texture2D" uid="uid://clbvn01r84bxf" path="res://assets/enemies/router crab/frame0000.png" id="3_a2nkd"]
[ext_resource type="Texture2D" uid="uid://c6pnjkf0n5d43" path="res://assets/enemies/calculator nme/calcv1/frame0000.png" id="3_tk8ji"]
[ext_resource type="Texture2D" uid="uid://dkbfg0pj58nf2" path="res://assets/enemies/slime ver3/frame0000.png" id="4_6si8q"]
[ext_resource type="Texture2D" uid="uid://cufkj3dyn8num" path="res://assets/enemies/calculator nme/calcv1/frame0001.png" id="4_wb6rl"]
[ext_resource type="Texture2D" uid="uid://cr0bauvotmf3i" path="res://assets/charas/ver4/frame0000.png" id="5_gq2ae"]
[ext_resource type="Texture2D" uid="uid://bvmqn2c7ncwl" path="res://assets/enemies/calculator nme/calcv1/frame0002.png" id="5_xbxyn"]
[ext_resource type="Texture2D" uid="uid://d2ldo8tsw3i5x" path="res://assets/simple shapes/circle.png" id="6_1pri2"]
[ext_resource type="Texture2D" uid="uid://dqu50s5tlkg8i" path="res://assets/enemies/calculator nme/calcv1/frame0003.png" id="6_cbss8"]
[ext_resource type="PackedScene" uid="uid://bv7jb5wlb3lh2" path="res://scenes/projectile_attachment.tscn" id="7_cdp18"]
[ext_resource type="Texture2D" uid="uid://bt56786uui1y7" path="res://assets/enemies/calculator nme/calcv1/frame0004.png" id="7_hjppc"]
[ext_resource type="Texture2D" uid="uid://b7x7iusuvdmby" path="res://assets/enemies/calculator nme/calcv1/frame0005.png" id="8_4bxuv"]
[ext_resource type="Texture2D" uid="uid://deeayguv6bpwj" path="res://assets/enemies/calculator nme/calcv1/frame0006.png" id="9_woxps"]
[ext_resource type="Texture2D" uid="uid://bmko4pjedvysa" path="res://assets/enemies/calculator nme/calcv1/frame0007.png" id="10_xykbs"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cf7er"]
resource_local_to_scene = true
shader = ExtResource("2_cdp18")
shader_parameter/hue_shift = 0.505
shader_parameter/saturation_boost = 1.185
shader_parameter/overlay_color = Color(1, 0, 0, 1)
shader_parameter/overlay_intensity = 0.0
shader_parameter/flash_amount = 0.0
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/enable_rainbow_outline = false
shader_parameter/line_thickness = 7.655
shader_parameter/sin_frequency = 0.5
shader_parameter/sin_offset = 0.0
shader_parameter/light_offset = 1.0

[sub_resource type="SpriteFrames" id="SpriteFrames_pxhi7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_a2nkd")
}, {
"duration": 1.0,
"texture": ExtResource("4_6si8q")
}, {
"duration": 1.0,
"texture": ExtResource("5_gq2ae")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_tk8ji")
}, {
"duration": 1.0,
"texture": ExtResource("4_wb6rl")
}, {
"duration": 1.0,
"texture": ExtResource("5_xbxyn")
}, {
"duration": 1.0,
"texture": ExtResource("6_cbss8")
}, {
"duration": 1.0,
"texture": ExtResource("7_hjppc")
}, {
"duration": 1.0,
"texture": ExtResource("8_4bxuv")
}, {
"duration": 1.0,
"texture": ExtResource("9_woxps")
}, {
"duration": 1.0,
"texture": ExtResource("10_xykbs")
}],
"loop": false,
"name": &"selfDestruct",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_gmke4"]
radius = 9.0

[sub_resource type="Animation" id="Animation_5ft6h"]
length = 0.001

[sub_resource type="Animation" id="Animation_pxhi7"]
resource_name = "flash"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/flash_amount")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_s72vd"]
resource_name = "slime_die_left"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -22.96), Vector2(-54, -22.96)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:material:shader_parameter/flash_amount")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_5byg2"]
resource_name = "slime_die_right"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -22.96), Vector2(54, -22.96)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:material:shader_parameter/flash_amount")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_khjxk"]
_data = {
&"RESET": SubResource("Animation_5ft6h"),
&"flash": SubResource("Animation_pxhi7"),
&"slime_die_left": SubResource("Animation_s72vd"),
&"slime_die_right": SubResource("Animation_5byg2")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_pxhi7"]
radius = 150.0

[node name="enemyEventType" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 8
collision_mask = 0
motion_mode = 1
script = ExtResource("1_hsuxr")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_cf7er")
scale = Vector2(0.059, 0.059)
sprite_frames = SubResource("SpriteFrames_pxhi7")
autoplay = "default"
frame = 2
offset = Vector2(0, -591.41)

[node name="Shadow" type="Sprite2D" parent="AnimatedSprite2D"]
self_modulate = Color(0.05, 0.05, 0.05, 0.866667)
z_index = -2
position = Vector2(-67.7966, 25.4237)
scale = Vector2(1.65519, 0.297934)
texture = ExtResource("6_1pri2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -15)
shape = SubResource("CircleShape2D_gmke4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_khjxk")
}

[node name="aim" type="Marker2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(0, -32)

[node name="aim_pos" type="Marker2D" parent="aim"]
unique_name_in_owner = true
position = Vector2(28, 0)

[node name="Line2D" type="Line2D" parent="aim/aim_pos"]
rotation = 1.5708
points = PackedVector2Array(0, -8.025, 0, -61.025)
width = 2.0

[node name="Line2D2" type="Line2D" parent="aim/aim_pos"]
visible = false
rotation = 1.5708
points = PackedVector2Array(-6.0002, -56, 0, -61.025, 6.9998, -56)
width = 2.0

[node name="AggroArea" type="Area2D" parent="."]
position = Vector2(0, -18)
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AggroArea"]
shape = SubResource("CircleShape2D_pxhi7")

[node name="flipTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Lifetime" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="SelfDestruct" type="Timer" parent="."]
one_shot = true

[node name="ProjectileAttachment" parent="." instance=ExtResource("7_cdp18")]
item = null

[connection signal="body_entered" from="AggroArea" to="." method="_on_aggro_area_body_entered"]
[connection signal="timeout" from="Lifetime" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="SelfDestruct" to="." method="_on_self_destruct_timeout"]
